# remediation-agent

./: .gitignore  CLAUDE.md
agent/: pyproject.toml  test_local.py
agent/pipeline/: agents.py  aws_actions.py  config.py  main.py  schemas.py  tools.py  tracing.py
agent/pipeline/prompts/: classification.yaml  remediation.yaml  summarization.yaml
app/: Dockerfile  main.py  pyproject.toml
infra/: .terraform.tfstate.lock.info  app.tf  ecs.tf  iam.tf  lambda.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  rds.tf  ses.tf  sqs.tf  variables.tf
scripts/: call-items.sh  commit-and-deploy.sh  deploy-agent.sh  deploy.sh  trigger-errors.sh
spec/: ARCHITECTURE.md  SCENARIOS.md
